enterprise/ivy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ivy
  template:
    metadata:
      labels:
        app: ivy
    spec:
      containers:
        - name: ivy
          image: axonivy/axonivy-engine:dev
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /system/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: config-volume
              mountPath: /ivy/configuration

            - name: ivy-data
              mountPath: /ivy/data

            - name: ivy-applications
              mountPath: /ivy/applications

      volumes:
        - name: ivy-data
          persistentVolumeClaim:
            claimName: ivy-data

        - name: ivy-applications
          persistentVolumeClaim:
            claimName: ivy-applications

        - name: config-volume
          configMap:
            name: ivy-config
            items:
              - key: LICENCE
                path: licence.lic
              - key: JGROUPS
                path: jgroups.xml
              - key: LOG4J2
                path: log4j2.xml
