enterprise/ivy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ivy
spec:
  clusterIP: None
  selector:
    app: ivy
  ports:
    - port: 8080
      targetPort: 8080
  #type: NodePort
