enterprise/ivy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivy-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "christian-loves-sticky-sessions"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
    nginx.ingress.kubernetes.io/session-cookie-domain: "raccoon.local"
spec:
  rules:
    - host: raccoon.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ivy
                port:
                  number: 8080
